<resources>
    <string name="app_name">projeto-minimo</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="cadastro">Cadastro</string>
    <string name="logo_do_programa_semente">Logo do Programa Semente</string>
    <string name="senha">Senha</string>
    <string name="usu_rio">Usuário</string>
    <string name="nome">Nome</string>
    <string name="escolha_o_tipo_de_professor_que_voc">Escolha o tipo de professor:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="professor">Professor</string>
    <string name="nome_completo">Nome Completo:</string>
    <string-array name="names">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string-array name="ptypes">
        <item>Professor Aplicador</item>
        <item>Professor Não Aplicador</item>
    </string-array>
    <string-array name="seriestypes">
        <item>E.I. - 4 anos</item>
        <item>E.I. - 5 anos</item>
        <item>E.F. I - 1° ano</item>
        <item>E.F. I - 2° ano</item>
        <item>E.F. I - 3° ano</item>
        <item>E.F. I - 4° ano</item>
        <item>E.F. I - 5° ano</item>
        <item>E.F. II - 6° ano</item>
        <item>E.F. II - 7° ano</item>
        <item>E.F. II - 8° ano</item>
        <item>E.F. II - 9° ano</item>
        <item>E.M. - 1ª Série</item>
        <item>E.M. - 2ª Série</item>
        <item>E.M. - 3ª Série</item>
    </string-array>
    android.permission.INTERNET
</resources>
