<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1A2A2D"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:background="@drawable/icon_semente"
        android:contentDescription="@string/logo_do_programa_semente" />


    <EditText android:id="@+id/text_username"
            android:singleLine="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/usu_rio"
            android:textSize="30sp"
            android:visibility="visible"
            android:layout_marginBottom="50dp"
            android:inputType="textEmailAddress"
            android:textColorHint="#698b91"
            android:textColorHighlight="#d6e015"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/text_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/senha"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColorHighlight="#d6e015"
            android:textColorHint="#698b91"
            android:textSize="30sp" />

    <Button android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:background="#d6e015"
        android:textColor="#024121"
        android:layout_marginTop="80dp" />

    <Button android:id="@+id/button_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/cadastro"
        android:background="#d6e015"
        android:textColor="#024121"
        android:layout_marginTop="40dp" />

</LinearLayout>